--- a/test.html
+++ b/test.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8" />
-    <title>SURPRISE TEST</title>
-</head>
-<body>
-    <h1>Arsonal is the best</h1>
-    <h2>The sky is blue</h2>
-    <h3>The sun is yellow</h3>
-    <h4>Emmanuel cheated</h4>
-    <h5>Marvel beats DC</h5>
-    <h6>Mr. Jabril</h6>
-    <p>Sflix is described as a streaming service offering movies and TV shows, similar to Netflix but potentially at a lower price point. It also includes exclusive content not found elsewhere </p>
-    <a href="https://sflix2.to/home">sflix</a>
-    <img src="shade.jpg.jpg" alt="shadow">
-    <p>Netflix is a media company known for its streaming service that allows users to watch movies and TV shows online</p>
-    <a href="https://www.netflix.com/ng/">Netflix</a>
-    <img src="https://f.woowoowoowoo.net/resize/250x400/1b/56/1b568aff26d162361fc34568b13bf0fc/1b568aff26d162361fc34568b13bf0fc.jpg">
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>SURPRISE TEST</title>
+        <style>
+            p {
+               color: rgb(0, 202, 54);
+            }
+        </style>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body class="bodi" id="bodyid">
+        <div>
+            <h1 class="h1">Arsonal is the best</h1>
+            <h2 class="h2">The sky is blue</h2>
+            <h3 class="h3">The sun is yellow</h3>
+            <h4 class="h4">Emmanuel cheated</h4>
+            <h5 class="h5">Marvel beats DC</h5>
+            <h6 class="h6">Mr. Jubril</h6>
+        </div>
+
+        <div>
+            <p class="p2">Sflix is described as a streaming service offering movies and TV shows, similar to Netflix but potentially at a lower price point. It also includes exclusive content not found elsewhere </p>
+            <a href="https://sflix2.to/home">sflix</a>
+            <img src="shade.jpg.jpg" alt="shadow">
+            <p>Netflix is a media company known for its streaming service that allows users to watch movies and TV shows online</p>
+            <a href="https://www.netflix.com/ng/" class="link">Netflix</a>
+            <img src="https://f.woowoowoowoo.net/resize/250x400/1b/56/1b568aff26d162361fc34568b13bf0fc/1b568aff26d162361fc34568b13bf0fc.jpg">
+        </div>
+    </body>
 </html>
